--- a/src/Makefile_Ecore.am
+++ b/src/Makefile_Ecore.am
@@ -52,10 +52,40 @@ lib_ecore_libecore_la_SOURCES += lib/ecore/ecore_signal.c lib/ecore/ecore_exe.c
 endif
 endif
 
-lib_ecore_libecore_la_CPPFLAGS = -I$(top_builddir)/src/lib/efl @ECORE_CFLAGS@
+lib_ecore_libecore_la_CPPFLAGS = -I$(top_builddir)/src/lib/efl \
+-DPACKAGE_BIN_DIR=\"$(bindir)\" \
+-DPACKAGE_LIB_DIR=\"$(libdir)\" \
+-DPACKAGE_DATA_DIR=\"$(datadir)/ecore\" \
+-DPACKAGE_BUILD_DIR=\"`pwd`/$(top_builddir)\" \
+@ECORE_CFLAGS@
 lib_ecore_libecore_la_LIBADD = @ECORE_LIBS@
 lib_ecore_libecore_la_DEPENDENCIES = @ECORE_INTERNAL_LIBS@
 lib_ecore_libecore_la_LDFLAGS = @EFL_LTLIBRARY_FLAGS@
+
+
+### Modules
+
+# systemd
+
+if WANT_SYSTEMD
+ecoresystemdpkgdir = $(libdir)/ecore/system/systemd/$(MODULE_ARCH)
+ecoresystemdpkg_LTLIBRARIES = modules/ecore/system/systemd/module.la
+modules_ecore_system_systemd_module_la_SOURCES = \
+modules/ecore/system/systemd/ecore_system_systemd.c
+modules_ecore_system_systemd_module_la_CPPFLAGS = \
+-I$(top_builddir)/src/lib/efl \
+@ECORE_CFLAGS@ \
+@ELDBUS_CFLAGS@
+modules_ecore_system_systemd_module_la_LIBADD = \
+@USE_ECORE_LIBS@ \
+@USE_ELDBUS_LIBS@
+modules_ecore_system_systemd_module_la_DEPENDENCIES = \
+@USE_ECORE_INTERNAL_LIBS@ \
+@USE_ELDBUS_INTERNAL_LIBS@
+modules_ecore_system_systemd_module_la_LDFLAGS = -module @EFL_LTMODULE_FLAGS@
+modules_ecore_system_systemd_module_la_LIBTOOLFLAGS = --tag=disable-static
+endif
+
 
 ### Unit tests
 
