ecore: add upower system module.
It's always enabled as it's a dbus module and links to nothing,
actually the daemon doesn't need to be running -- in that case it will
do nothing. In the case the daemon becomes active then it will get the
OnLowBattery property and keep it in sync.

NOTE: I couldn't test the property change as my laptop takes many
hours to get to that situation... let's hope it works :-)

--- a/src/Makefile_Ecore.am
+++ b/src/Makefile_Ecore.am
@@ -86,6 +86,25 @@ modules_ecore_system_systemd_module_la_LDFLAGS = -module @EFL_LTMODULE_FLAGS@
 modules_ecore_system_systemd_module_la_LIBTOOLFLAGS = --tag=disable-static
 endif
 
+# upower
+
+ecoreupowerpkgdir = $(libdir)/ecore/system/upower/$(MODULE_ARCH)
+ecoreupowerpkg_LTLIBRARIES = modules/ecore/system/upower/module.la
+modules_ecore_system_upower_module_la_SOURCES = \
+modules/ecore/system/upower/ecore_system_upower.c
+modules_ecore_system_upower_module_la_CPPFLAGS = \
+-I$(top_builddir)/src/lib/efl \
+@ECORE_CFLAGS@ \
+@ELDBUS_CFLAGS@
+modules_ecore_system_upower_module_la_LIBADD = \
+@USE_ECORE_LIBS@ \
+@USE_ELDBUS_LIBS@
+modules_ecore_system_upower_module_la_DEPENDENCIES = \
+@USE_ECORE_INTERNAL_LIBS@ \
+@USE_ELDBUS_INTERNAL_LIBS@
+modules_ecore_system_upower_module_la_LDFLAGS = -module @EFL_LTMODULE_FLAGS@
+modules_ecore_system_upower_module_la_LIBTOOLFLAGS = --tag=disable-static
+
 
 ### Unit tests
 
