ecore system: Add Tizen backend

--- a/src/Makefile_Ecore.am
+++ b/src/Makefile_Ecore.am
@@ -105,6 +105,25 @@ modules_ecore_system_upower_module_la_DEPENDENCIES = \
 modules_ecore_system_upower_module_la_LDFLAGS = -module @EFL_LTMODULE_FLAGS@
 modules_ecore_system_upower_module_la_LIBTOOLFLAGS = --tag=disable-static
 
+# tizen
+
+if HAVE_TIZEN_CONFIGURATION_MANAGER
+ecoretizenpkgdir = $(libdir)/ecore/system/tizen/$(MODULE_ARCH)
+ecoretizenpkg_LTLIBRARIES = modules/ecore/system/tizen/module.la
+modules_ecore_system_tizen_module_la_SOURCES = \
+modules/ecore/system/tizen/ecore_system_tizen.c
+modules_ecore_system_tizen_module_la_CPPFLAGS = \
+-I$(top_builddir)/src/lib/efl \
+@ECORE_CFLAGS@ \
+@TIZEN_CONFIGURATION_MANAGER_CFLAGS@
+modules_ecore_system_tizen_module_la_LIBADD = \
+@USE_ECORE_LIBS@ \
+@TIZEN_CONFIGURATION_MANAGER_LIBS@
+modules_ecore_system_tizen_module_la_DEPENDENCIES = \
+@USE_ECORE_INTERNAL_LIBS@
+modules_ecore_system_tizen_module_la_LDFLAGS = -module @EFL_LTMODULE_FLAGS@
+modules_ecore_system_tizen_module_la_LIBTOOLFLAGS = --tag=disable-static
+endif
 
 ### Unit tests
 
