--- a/src/Makefile_Evas.am
+++ b/src/Makefile_Evas.am
@@ -895,10 +895,20 @@ WAYLAND_EGL_SOURCES = \
 modules/evas/engines/wayland_egl/evas_engine.c \
 modules/evas/engines/wayland_egl/evas_wl_main.c \
 modules/evas/engines/wayland_egl/evas_engine.h
+
+module_wayland_BUILT_SOURCES = \
+modules/evas/engines/wayland_egl/subsurface-protocol.c \
+modules/evas/engines/wayland_egl/subsurface-client-protocol.h
+
+CLEANFILES += $(module_wayland_BUILT_SOURCES)
+BUILT_SOURCES += $(module_wayland_BUILT_SOURCES)
+WAYLAND_EGL_SOURCES += $(module_wayland_BUILT_SOURCES)
+
 if EVAS_STATIC_BUILD_WAYLAND_EGL
 lib_evas_libevas_la_SOURCES += $(WAYLAND_EGL_SOURCES)
 lib_evas_libevas_la_CPPFLAGS += \
 -I$(top_srcdir)/src/modules/evas/engines/gl_common \
+-I$(top_builddir)/src/modules/evas/engines/wayland_egl \
 @evas_engine_wayland_egl_cflags@
 lib_evas_libevas_la_LIBADD += @evas_engine_wayland_egl_libs@
 else
@@ -909,6 +919,7 @@ modules_evas_engines_wayland_egl_module_la_CPPFLAGS = -I$(top_builddir)/src/lib/
 -I$(top_srcdir)/src/lib/evas/include \
 -I$(top_srcdir)/src/lib/evas/cserve2 \
 -I$(top_srcdir)/src/modules/evas/engines/gl_common \
+-I$(top_builddir)/src/modules/evas/engines/wayland_egl \
 @EVAS_CFLAGS@ \
 @evas_engine_wayland_egl_cflags@
 modules_evas_engines_wayland_egl_module_la_LIBADD = \
@@ -921,6 +932,14 @@ modules/evas/engines/gl_common/libevas_engine_gl_common.la
 modules_evas_engines_wayland_egl_module_la_LDFLAGS = -module @EFL_LTMODULE_FLAGS@
 modules_evas_engines_wayland_egl_module_la_LIBTOOLFLAGS = --tag=disable-static
 endif
+
+modules/evas/engines/wayland_egl/subsurface-protocol.c: $(wayland_protocoldir)/subsurface.xml
+	$(AM_V_GEN)$(wayland_scanner) code < $< > $@
+
+modules/evas/engines/wayland_egl/subsurface-client-protocol.h: $(wayland_protocoldir)/subsurface.xml
+	$(AM_V_GEN)$(wayland_scanner) client-header < $< > $@
+
+
 endif
 
 if BUILD_ENGINE_WAYLAND_SHM
