--- a/configure.ac
+++ b/configure.ac
@@ -3665,6 +3665,7 @@ EFL_INTERNAL_DEPEND_PKG([ETHUMB_CLIENT], [eo])
 EFL_INTERNAL_DEPEND_PKG([ETHUMB_CLIENT], [ecore])
 EFL_INTERNAL_DEPEND_PKG([ETHUMB_CLIENT], [eldbus])
 EFL_INTERNAL_DEPEND_PKG([ETHUMB_CLIENT], [ethumb])
+EFL_INTERNAL_DEPEND_PKG([ETHUMB_CLIENT], [evas])
 
 EFL_EVAL_PKGS([ETHUMB_CLIENT])
 
