evas: add JPEG 2000 loader.
This add finally support for JPEG 2000, but be aware that libopenjpeg
is very badly managed. There is currently only version 1.5.x that does
provide the right files, is usable by a third party and portable. You
can seriously forget any other version.

--- a/configure.ac
+++ b/configure.ac
@@ -1241,6 +1241,7 @@ ARG_ENABLE_EVAS_IMAGE_LOADER(Generic, static)
 ARG_ENABLE_EVAS_IMAGE_LOADER(Gif, yes)
 ARG_ENABLE_EVAS_IMAGE_LOADER(ICO, static)
 ARG_ENABLE_EVAS_IMAGE_LOADER(JPEG, static)
+ARG_ENABLE_EVAS_IMAGE_LOADER(JP2K, auto)
 ARG_ENABLE_EVAS_IMAGE_LOADER(PMAPS, static)
 ARG_ENABLE_EVAS_IMAGE_LOADER(PNG, static)
 ARG_ENABLE_EVAS_IMAGE_LOADER(PSD, static)
@@ -1522,6 +1523,7 @@ EVAS_CHECK_IMAGE_LOADER([Generic], [${want_evas_image_loader_generic}])
 EVAS_CHECK_IMAGE_LOADER([Gif],     [${want_evas_image_loader_gif}])
 EVAS_CHECK_IMAGE_LOADER([ICO],     [${want_evas_image_loader_ico}])
 EVAS_CHECK_IMAGE_LOADER([JPEG],    [${want_evas_image_loader_jpeg}])
+EVAS_CHECK_IMAGE_LOADER([JP2K],    [${want_evas_image_loader_jp2k}])
 EVAS_CHECK_IMAGE_LOADER([PMAPS],   [${want_evas_image_loader_pmaps}])
 EVAS_CHECK_IMAGE_LOADER([PNG],     [${want_evas_image_loader_png}])
 EVAS_CHECK_IMAGE_LOADER([PSD],     [${want_evas_image_loader_psd}])
