examples/ecore: don't use ECORE_CON_LIBS
We can't use ECORE_CON_LIBS at the examples/ "make" context
since it defines libraries relative to the src/ directory
(e.g. lib/ecore/libecore.la).  Use ECORE_CON_COMMON_LDADD instead.

This fixes the following link error with ecore_fd_handler_gnutls_example
when the project is configured with --with-crypto=gnutls:

libtool: link: cannot find the library `lib/ecore/libecore.la'

Signed-off-by: U. Artie Eoff <ullysses.a.eoff@intel.com>

--- a/src/examples/ecore/Makefile.am
+++ b/src/examples/ecore/Makefile.am
@@ -179,8 +179,7 @@ ecore_fd_handler_example_LDADD = $(ECORE_COMMON_LDADD)
 if HAVE_CRYPTO_GNUTLS
 EXTRA_PROGRAMS += ecore_fd_handler_gnutls_example
 ecore_fd_handler_gnutls_example_SOURCES = ecore_fd_handler_gnutls_example.c
-ecore_fd_handler_gnutls_example_LDADD = $(ECORE_COMMON_LDADD) @ECORE_CON_LIBS@
-ecore_fd_handler_gnutls_example_CFLAGS = @ECORE_CON_CFLAGS@
+ecore_fd_handler_gnutls_example_LDADD = $(ECORE_CON_COMMON_LDADD)
 endif
 
 ecore_file_download_example_SOURCES = ecore_file_download_example.c
