eina: add infrastructure to handle more CPU and compiler builtin information.

--- a/configure.ac
+++ b/configure.ac
@@ -792,6 +792,9 @@ AC_DEFINE_IF([HAVE_DIRENT_H], [test "x${have_dirent}" = "xyes"],
 ### Checks for structures
 
 ### Checks for compiler characteristics
+EFL_CHECK_GCC_BUILTIN([bswap16], [HAVE_BSWAP16])
+EFL_CHECK_GCC_BUILTIN([bswap32], [HAVE_BSWAP32])
+EFL_CHECK_GCC_BUILTIN([bswap64], [HAVE_BSWAP64])
 
 ### Checks for linker characteristics
 
