--- a/src/lib/eina/eina_config.h.in
+++ b/src/lib/eina/eina_config.h.in
@@ -72,4 +72,19 @@
 #endif
 @EINA_CONFIGURE_HAVE_ALLOCA_H@
 
+#ifdef EINA_HAVE_BSWAP16
+# undef EINA_HAVE_BSWAP16
+#endif
+@EINA_CONFIGURE_HAVE_BSWAP16@
+
+#ifdef EINA_HAVE_BSWAP32
+# undef EINA_HAVE_BSWAP32
+#endif
+@EINA_CONFIGURE_HAVE_BSWAP32@
+
+#ifdef EINA_HAVE_BSWAP64
+# undef EINA_HAVE_BSWAP64
+#endif
+@EINA_CONFIGURE_HAVE_BSWAP64@
+
 #endif /* EINA_CONFIG_H_ */
