eina: handle more compiler strangeness for bswap.
So current order is :
- __builtin_bswap*() for compiler that provide it
- _byteswap_*() for MSVC
- bswap_*() for older Linux and some BSD
- own C code when everything else fall appart.

The reason for this order is that the builtin will always generate
the best assembly possible. On my system bswap_*() are not changing
in all version to the best solution as they are almost equivalent to
the C macro.

--- a/src/lib/eina/eina_config.h.in
+++ b/src/lib/eina/eina_config.h.in
@@ -87,4 +87,9 @@
 #endif
 @EINA_CONFIGURE_HAVE_BSWAP64@
 
+#ifdef EINA_HAVE_BYTESWAP_H
+# undef EINA_HAVE_BYTESWAP_H
+#endif
+@EINA_CONFIGURE_HAVE_BYTESWAP_H@
+
 #endif /* EINA_CONFIG_H_ */
