Adding italian entries in desktop files

--- a/src/tests/efreet/data/test_type.desktop
+++ b/src/tests/efreet/data/test_type.desktop
@@ -4,9 +4,11 @@ Type=My_Type
 Name=Efreet Test Application
 Name[eo]=Provoversia aplikaĵo de Efreet
 Name[fr]=Application test pour Efreet
+Name[it]=Applicazione di test per Efreet
 GenericName=Test Application
 GenericName[eo]=Provoversia aplikaĵo
 GenericName[fr]=Application test
+GenericName[it]=Applicazione di test
 Icon=TestIcon
 Exec=efreet_test %F %i
 Categories=Test;Enlightenment;
