--- a/src/Makefile_Eo.am
+++ b/src/Makefile_Eo.am
@@ -10,6 +10,7 @@ lib_eo_libeo_la_SOURCES = \
 lib/eo/eo.c \
 lib/eo/eo_ptr_indirection.c \
 lib/eo/eo_ptr_indirection.h \
+lib/eo/eo_class_class.c \
 lib/eo/eo_base_class.c \
 lib/eo/eo_private.h
 
