--- a/src/Makefile_Eina.am
+++ b/src/Makefile_Eina.am
@@ -268,7 +268,8 @@ tests/eina/eina_test_simple_xml_parser.c \
 tests/eina/eina_test_value.c \
 tests/eina/eina_test_cow.c \
 tests/eina/eina_test_barrier.c \
-tests/eina/eina_test_tmpstr.c
+tests/eina/eina_test_tmpstr.c \
+tests/eina/eina_test_lock.c
 # tests/eina/eina_test_model.c
 
 tests_eina_eina_suite_CPPFLAGS = -I$(top_builddir)/src/lib/efl \
