--- a/src/Makefile_Evil.am
+++ b/src/Makefile_Evil.am
@@ -10,11 +10,9 @@ lib/evil/Evil.h \
 lib/evil/evil_fcntl.h \
 lib/evil/evil_inet.h \
 lib/evil/evil_langinfo.h \
-lib/evil/evil_libgen.h \
 lib/evil/evil_macro.h \
 lib/evil/evil_macro_pop.h \
 lib/evil/evil_main.h \
-lib/evil/evil_print.h \
 lib/evil/evil_stdlib.h \
 lib/evil/evil_stdio.h \
 lib/evil/evil_string.h \
@@ -34,49 +32,15 @@ evilmmanheadersdir = $(includedir)/evil-@VMAJ@/sys
 dist_evilmmanheaders_DATA = \
 lib/evil/sys/mman.h
 
-# gdtoa
 lib_evil_libevil_la_SOURCES = \
-lib/evil/gdtoa/arithchk.c \
-lib/evil/gdtoa/dmisc.c \
-lib/evil/gdtoa/dtoa.c \
-lib/evil/gdtoa/gd_arith.h \
-lib/evil/gdtoa/g_dfmt.c \
-lib/evil/gdtoa/gd_qnan.h \
-lib/evil/gdtoa/gdtoa.c \
-lib/evil/gdtoa/gdtoa_fltrnds.h \
-lib/evil/gdtoa/gdtoa.h \
-lib/evil/gdtoa/gdtoaimp.h \
-lib/evil/gdtoa/gethex.c \
-lib/evil/gdtoa/g_ffmt.c \
-lib/evil/gdtoa/g__fmt.c \
-lib/evil/gdtoa/gmisc.c \
-lib/evil/gdtoa/g_xfmt.c \
-lib/evil/gdtoa/hd_init.c \
-lib/evil/gdtoa/hexnan.c \
-lib/evil/gdtoa/misc.c \
-lib/evil/gdtoa/qnan.c \
-lib/evil/gdtoa/smisc.c \
-lib/evil/gdtoa/strtodg.c \
-lib/evil/gdtoa/strtof.c \
-lib/evil/gdtoa/strtopx.c \
-lib/evil/gdtoa/sum.c \
-lib/evil/gdtoa/ulp.c
-
-#evil
-lib_evil_libevil_la_SOURCES += \
 lib/evil/evil_dirent.c \
 lib/evil/evil_fcntl.c \
 lib/evil/evil_fnmatch.c \
 lib/evil/evil_fnmatch_list_of_states.c \
 lib/evil/evil_inet.c \
 lib/evil/evil_langinfo.c \
-lib/evil/evil_libgen.c \
 lib/evil/evil_main.c \
 lib/evil/evil_mman.c \
-lib/evil/evil_pformata.c \
-lib/evil/evil_pformatw.c \
-lib/evil/evil_printa.c \
-lib/evil/evil_printw.c \
 lib/evil/evil_pwd.c \
 lib/evil/evil_stdlib.c \
 lib/evil/evil_stdio.c \
@@ -85,7 +49,6 @@ lib/evil/evil_time.c \
 lib/evil/evil_unistd.c \
 lib/evil/evil_util.c \
 lib/evil/evil_uuid.c \
-lib/evil/evil_pformat.h \
 lib/evil/evil_private.h \
 lib/evil/evil_fnmatch_private.h
 
@@ -95,7 +58,7 @@ else
 lib_evil_libevil_la_SOURCES += lib/evil/evil_link_xp.cpp
 endif
 
-lib_evil_libevil_la_CFLAGS = @EVIL_CFLAGS@ @EVIL_CFLAGS_WRN@
+lib_evil_libevil_la_CFLAGS = @EVIL_CFLAGS@ @EVIL_CFLAGS_WRN@ -D__MINGW_PRINTF_FORMAT
 lib_evil_libevil_la_CXXFLAGS = @EVIL_CXXFLAGS@ @EVIL_CFLAGS@
 lib_evil_libevil_la_LIBADD = @EVIL_LIBS@
 lib_evil_libevil_la_LDFLAGS = @EFL_LTLIBRARY_FLAGS@
