ecore_x/xlib/ecore_x_vsync.c uses dlopen and dlsym, but configure.ac only checks for this for the XCB variant. This results in linker errors when using strict linker flags (-Wl,-z,defs)

--- a/configure.ac
+++ b/configure.ac
@@ -2772,6 +2772,9 @@ if test "x${want_x11_xlib}" = "xyes" ; then
 
    AC_DEFINE([HAVE_ECORE_X_XLIB], [1], [Defined to 1 if Xlib is enabled.])
    HAVE_ECORE_X_BACKEND="HAVE_ECORE_X_XLIB"
+
+   EFL_EVAL_PKGS([ECORE_X])
+   EFL_CHECK_FUNCS([ECORE_X], [dlopen dlsym])
 fi
 
 ## XCB
